[package]
name = "speech"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"

[dependencies.windows]
version = "0.58"
features = [
    "Foundation_Collections",
    "Media_SpeechSynthesis",
    "Media_Playback",
    "Media_Core",
    "Storage_Streams",
    "Win32_System_WinRT",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Controls",
]

[profile.dev]
debug = 0

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
